--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,3 +3,13 @@ body{
 	color: white;
 	font-family: Verdana;
 }
+h1{
+	font-family: arial;
+}
+a{
+	color:inherit;
+}
+div{
+	margin-top: 10px;
+	margin-left: 20px;
+}
